<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FOGmain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <!-- AddEditParty -->
    <string name="NameOfParty">Name of Party</string>
    <string name="Description">Description</string>
    <string name="Address">Address</string>
    <string name="Zip">Zip</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="DoorCode">Door Code</string>
    <string name="TVstartTime">2013–04–30 00:00:00</string>
    <string name="SetStartTime">Set Start Time</string>
    <string name="TVendTime">2013–04–30 00:00:00</string>
    <string name="SetEndTime">Set End Time</string>
    <string name="MinAge18">Min. Age (18)</string>
    <string name="MaxAge100">Max. Age (100)</string>
    <string name="ShowPhotos">Show Photos</string>
    <string name="ShowWall">Show Wall</string>
    <string name="CreateParty">Create Party</string>
    <string name="LatestParty">Latest Party</string>
    
    
    <!-- Login -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    
    
    <!-- Main -->
    <string name="getParties">get parties</string>
    <string name="Loading">Loading</string>
    <string name="PleaseWait">Please wait..</string>
    
    
    <!-- Menu -->
    <string name="AddParty">Add Party</string>
    <string name="Search">Search</string>
    <string name="Parties">Parties</string>
    <string name="Profile">Profile</string>
    
    
    <!-- Profile -->
    <string name="back">Back</string>
    <string name="drsPro">Profile Image</string>
    <string name="firstname">Første navn</string>
    <string name="lastname">Sidste navn...</string>
    <string name="locations">Lokation: </string>
    <string name="DynLocations">Dynamisk Lokation</string>
    <string name="biografi">Her indsættes biografien fra ens facebook login. Sådan der kommer til at stå en masse her.</string>
    
    
    <!-- ResultView -->
    <string name="SeeOnMap">See On Map</string>
    
    
    <!-- SearchParty -->
    <string name="Radius">Radius:</string>
    <string name="SelectLocationOnMap">Select Location On Map</string>
    <string name="FromLocation">From Location</string>
    <string name="Age">Age:</string>
    <!-- And a search here aswell -->
    
    
    <!-- ViewParty -->
    <string name="TextView">TextView</string>
    <!-- And a AddParty here aswell -->
    <string name="EditParty">Edit Party</string>
    
    
    <!-- frameLayout -->
    
    
    <!-- infoWindowView -->
    <string name="PartyTitle">11111111111111</string>
    <string name="GoToParty">Go To Party!</string>    
    
    <!-- AddEditParty -->
    <string name="NameOfParty">Name of Party</string>
    <string name="Description">Description</string>
    <string name="Address">Address</string>
    <string name="Zip">Zip</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="DoorCode">Door Code</string>
    <string name="TVstartTime">2013–04–30 00:00:00</string>
    <string name="SetStartTime">Set Start Time</string>
    <string name="TVendTime">2013–04–30 00:00:00</string>
    <string name="SetEndTime">Set End Time</string>
    <string name="MinAge18">Min. Age (18)</string>
    <string name="MaxAge100">Max. Age (100)</string>
    <string name="ShowPhotos">Show Photos</string>
    <string name="ShowWall">Show Wall</string>
    <string name="CreateParty">Create Party</string>
    <string name="LatestParty">Latest Party</string>

    <!-- Login -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>

    <!-- Main -->
    <string name="getParties">get parties</string>
    <string name="Loading">Loading</string>
    <string name="PleaseWait">Please wait..</string>

    <!-- Menu -->
    <string name="AddParty">Add Party</string>
    <string name="Search">Search</string>
    <string name="Parties">Parties</string>
    <string name="Profile">Profile</string>

    <!-- Profile -->
    <string name="back">Back</string>
    <string name="drsPro">Profile Image</string>
    <string name="firstname">Første navn</string>
    <string name="lastname">Sidste navn...</string>
    <string name="locations">Lokation: </string>
    <string name="DynLocations">Dynamisk Lokation</string>
    <string name="biografi">Her indsættes biografien fra ens facebook login. Sådan der kommer til at stå en masse her.</string>
    
    
    <!-- Profile -->
    <string name="back">Back</string>
    <string name="drsPro">Profile Image</string>
    <string name="firstname">Første navn</string>
    <string name="lastname">Sidste navn...</string>
    <string name="locations">Lokation: </string>
    <string name="DynLocations">Dynamisk Lokation</string>
    <string name="biografi">Her indsættes biografien fra ens facebook login. Sådan der kommer til at stå en masse her.</string>
    
    
    <!-- ResultView -->
    <string name="SeeOnMap">See On Map</string>

    <!-- SearchParty -->
    <string name="Radius">Radius:</string>
    <string name="SelectLocationOnMap">Select Location On Map</string>
    <string name="FromLocation">From Location</string>
    <string name="Age">Age:</string>
    <!-- And a search here aswell -->


    <!-- ViewParty -->
    <string name="TextView">TextView</string>
    <!-- And a AddParty here aswell -->
    <string name="EditParty">Edit Party</string>

    <!-- frameLayout -->


    <!-- infoWindowView -->
    <string name="PartyTitle">11111111111111</string>
    <string name="GoToParty">Go To Party!</string>

    <!-- editProfil -->
    <string name="btn_change_pic">Change Profil Picture</string>
    <string name="Hint_fname">Firstname</string>
    <string name="Hint_lname">Lastname</string>
    <string name="Hint_bday">Birthday</string>
    <string name="Hint_street">Street</string>
    <string name="Hint_zip">Zip</string>
    <string name="Hint_city">City</string>
    <string name="Hint_country">Country</string>
    <string name="Hint_phone">Phone Number</string>
    <string name="Hint_email">Email</string>
    <string name="Hint_desc">Description of you</string>

</resources>
